--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
   <color name="splashscreen_background">#b1fcfb</color>
-  <color name="iconBackground">#0f2d44</color>
+  <color name="iconBackground">#b1fcfb</color>
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#b1fcfb</color>
 </resources>
