--- a/ios/MagicBoxer/SplashScreen.storyboard
+++ b/ios/MagicBoxer/SplashScreen.storyboard
@@ -31,6 +31,7 @@
                         <color key="backgroundColor" name="SplashScreenBackground"/>
                         <color key="backgroundColor" name="SplashScreenBackground"/>
                         <color key="backgroundColor" name="SplashScreenBackground"/>
+                        <color key="backgroundColor" name="SplashScreenBackground"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="EXPO-PLACEHOLDER-1" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -40,6 +41,9 @@
     </scenes>
     <resources>
         <image name="SplashScreenLogo" width="414" height="736"/>
+        <namedColor name="SplashScreenBackground">
+            <color alpha="1.000" blue="0.984313725490196" green="0.988235294117647" red="0.694117647058824" customColorSpace="sRGB" colorSpace="custom"/>
+        </namedColor>
         <namedColor name="SplashScreenBackground">
             <color alpha="1.000" blue="0.984313725490196" green="0.988235294117647" red="0.694117647058824" customColorSpace="sRGB" colorSpace="custom"/>
         </namedColor>
