--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
-  <color name="splashscreen_background">#c6c6c7</color>
-  <color name="iconBackground">#c6c6c7</color>
+  <color name="splashscreen_background">#808080</color>
+  <color name="iconBackground">#808080</color>
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#c6c6c7</color>
 </resources>
